[project]
name = "workbench"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["pytest~=8.3.4", "pytest-mock~=3.14.0"]

[dependency-groups]
lint = ["ruff~=0.8.4"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
extend-select = ["I"]

[tool.mypy]
python_version = "3.12"
exclude = [".venv"]
disable_error_code = ["import-untyped"]
